--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -4,6 +4,20 @@ server:
 spring:
   application:
     name: eureka-client
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:password@localhost:8761/eureka/,http://user:password@localhost:8762/eureka/,http://user:password@localhost:8763/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "info,health,service-registry"
+
+---
+spring:
+  profiles: peer1
 
 eureka:
   client:
