--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 		<module>turbine</module>
 		<module>ribbon-client</module>
 		<module>zuul</module>
+		<module>spring-retry</module>
+		<module>config-server</module>
+		<module>config-client</module>
 	</modules>
 
 
