--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,9 +1,16 @@
 server:
-  port: 8082
+  port: 8016
 
 spring:
   application:
-    name: eureka-client
+    name: configserver
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/zhouxianfeng776/config-repo
+          searchPaths: '{application}'
+          basedir: target/config
 eureka:
   client:
     serviceUrl:
@@ -15,13 +22,17 @@ management:
       exposure:
         include: "info,health,service-registry,features"
 
-test: test1
 ---
 spring:
-  profiles: peer1
+  profiles: native
+  cloud:
+    config:
+      server:
+        native:
+          searchLocations: file:/F:/demo/subdir
 
 server:
-  port: 8014
+  port: 8017
 
 test: peer1
 
@@ -30,4 +41,3 @@ eureka:
     serviceUrl:
       defaultZone: http://user:password@localhost:8761/eureka/,http://user:password@localhost:8762/eureka/,http://user:password@localhost:8763/eureka/
 
-isException: true
